src/module5/examples/dist/01_basic-types.js
"use strict";
Object.defineProperty(exports, "__esModule", { value: true });
let myName = "hello";
// myName = 123;  // error
let myNum = 123;
// myNum = "hello";  // error
let myBool = false;
// myBool = 123; // error
let myAny = 'string';
myAny = 23;
